--- a/css/app.css
+++ b/css/app.css
@@ -267,32 +267,32 @@ img {
   background-color: var(--primary);
 }
 
-.blog__grid{
-  display:grid;
-  gap:4rem;
+.blog__grid {
+  display: grid;
+  gap: 4rem;
 }
-@media(min-width: 768px){
-    .blog__grid{
-      grid-template-columns: repeat(2,1fr);
-    }
+@media (min-width: 768px) {
+  .blog__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
-@media(min-width: 992px){
-    .blog__grid{
-      grid-template-columns: repeat(4,1fr);
-    }
+@media (min-width: 992px) {
+  .blog__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
-.entrada__contenido{
-  padding:2rem;
+.entrada__contenido {
+  padding: 2rem;
 }
-.entrada__titulo{
+.entrada__titulo {
   font-weight: 400;
   font-size: 2.8rem;
-  margin:0;
+  margin: 0;
   line-height: 1.2;
 }
-.entrada__fecha{
+.entrada__fecha {
   font-size: 1.6rem;
-  color:var(--primary);
+  color: var(--primary);
 }
 .entrada__enlace {
   margin-top: 2rem;
@@ -313,10 +313,62 @@ img {
   color: var(--blanco);
 }
 
-.entrada__texto{
+.entrada__texto {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 4;
   overflow: hidden;
   font-size: 1.6rem;
+}
+
+.footer {
+  margin-top: 5rem;
+  background-color: var(--negro);
+  padding: 5rem 0;
+}
+
+  .footer__contenido{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  @media(min-width: 992px){
+      .footer__contenido{
+        flex-direction: row;
+        justify-content: space-between;
+      }
+  }
+
+.footer__nav{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media(min-width: 768px){
+    .footer__nav{
+      flex-direction: row;
+      gap:2rem;
+    }
+}
+.footer__enlace {
+  font-size: 2.8rem;
+  color:var(--blanco);
+  text-decoration: none;
+  font-weight: 700;
+}
+.footer__enlace:hover{
+  color:var(--primary);
+}
+.footer__copyright {
+  font-size: 2.8rem;
+  color:var(--blanco);
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+@media(min-width: 992px){
+  .footer__copyright{
+    margin: 0;
+  }
 }
