--- a/css/app.css
+++ b/css/app.css
@@ -22,13 +22,13 @@ img {
   max-width: 100%;
 }
 
-[class*="__contenedor"] {
+[class*="contenedor"] {
   max-width: 120rem;
   margin: 0 auto;
   width: 95%;
 }
 
-[class*="__heading"] {
+[class*="heading"] {
   font-size: 4rem;
   text-align: center;
   font-weight: 900;
@@ -327,48 +327,48 @@ img {
   padding: 5rem 0;
 }
 
-  .footer__contenido{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  @media(min-width: 992px){
-      .footer__contenido{
-        flex-direction: row;
-        justify-content: space-between;
-      }
-  }
-
-.footer__nav{
+.footer__contenido {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-@media(min-width: 768px){
-    .footer__nav{
-      flex-direction: row;
-      gap:2rem;
-    }
+@media (min-width: 992px) {
+  .footer__contenido {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.footer__nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .footer__nav {
+    flex-direction: row;
+    gap: 2rem;
+  }
 }
 .footer__enlace {
   font-size: 2.8rem;
-  color:var(--blanco);
+  color: var(--blanco);
   text-decoration: none;
   font-weight: 700;
 }
-.footer__enlace:hover{
-  color:var(--primary);
+.footer__enlace:hover {
+  color: var(--primary);
 }
 .footer__copyright {
   font-size: 2.8rem;
-  color:var(--blanco);
+  color: var(--blanco);
   font-weight: 700;
   text-align: center;
   margin-bottom: 0;
 }
 
-@media(min-width: 992px){
-  .footer__copyright{
+@media (min-width: 992px) {
+  .footer__copyright {
     margin: 0;
   }
 }
